feat: add normalize, grid, variable, gulp setting

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repair Design</title>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.min.css">
 </head>
 <body>
     <header class="header">
@@ -20,7 +22,7 @@
                 </nav>
                 <div class="contacts menu__contacts">
                     <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-                    <button class="button contacts__button button--promary">Заказать звонок</button>
+                    <button class="button contacts__button button--primary">Заказать звонок</button>
                 </div>
             </div>
         </div>
